@startuml
'https://plantuml.com/ie-diagram

skinparam linetype ortho

entity Rooms {
* room_id: integer <&key>
..
* type: String
* price: double
* number: integer
available: boolean
}

entity Customers {
* customer_id: integer <&key>
..
* name: String
city: String
email: String
}

entity Bookings {
* booking_id: integer <&key>
..
* room_id: integer <&arrow-circle-right>
* customer_id: integer <&arrow-circle-right>
start_date: Date
end_date: Date
}

Bookings ||--|{ Rooms
Bookings ||--|{ Customers

@enduml